# object_recognition_ros

./: CHANGELOG.rst  CMakeLists.txt  genindex.html  index.html  manifest.xml  msgs.html  objects.inv  ork_rviz_plugin.xml  package.xml  pubsub.html  ros_quickguide.html  rviz.html  search.html  searchindex.js  server.html  setup.py  stack.xml
_sources/: index.txt  msgs.txt  ros_quickguide.txt  rviz.txt
apps/: client.py  server  server.py
conf/: detection.test.ros.ork  detection.tod.example.ork
doc/source/: conf.py  index.rst  pubsub.rst  rviz.rst  server.rst
include/object_recognition_ros/: object_info_cache.h
launch/: client.launch  object_information_server.launch  openni_robot.launch  server.desktop.launch  server.robot.launch
python/object_recognition_ros/: __init__.py  server.py
python/object_recognition_ros/io/: __init__.py
python/object_recognition_ros/io/sink/: __init__.py  publisher.py
python/object_recognition_ros/io/source/: __init__.py  bag_reader.py  ros_kinect.py
src/: CMakeLists.txt
src/info_cache/: CMakeLists.txt  info_cache.cpp
src/info_service/: CMakeLists.txt  info_service.cpp
src/io/: CMakeLists.txt  MsgAssembler.cpp  VisualizationMsgAssembler.cpp
src/rviz_plugin/: CMakeLists.txt  ork_display.cpp  ork_display.h  ork_object_display.cpp  ork_object_display.h  ork_object_visual.cpp  ork_table_display.cpp  ork_table_display.h  ork_table_visual.cpp  ork_table_visual.h  ork_visual.cpp  ork_visual.h
src/server/: CMakeLists.txt  client.py  server.py
src/server/conf/: config_detection.sample
src/server/launch/: client.launch  server.desktop.launch
test/: CMakeLists.txt  action_server.test  config_detection_test.json  test_action_server.launch  test_client.py  test_server.py  test_server2.py
