<package>
  <name>object_recognition_ros</name>
  <version>0.1.6</version>
  <description>object_recognition_core contains tools to launch several recognition pipelines, train objects, store models ...</description>
  <author email="erublee@willowgarage.com">Ethan Rublee</author>
  <author email="vrabaud@willowgarage.com">Vincent Rabaud</author>
  <maintainer email="vrabaud@willowgarage.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <url>http://ecto.willowgarage.com/recognition</url>

  <build_depend>actionlib</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>curl</build_depend>
  <build_depend>ecto</build_depend>
  <build_depend>ecto_ros</build_depend>
  <build_depend>ecto_image_pipeline</build_depend>
  <build_depend>object_recognition_core</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>curl</run_depend>
  <run_depend>ecto</run_depend>
  <run_depend>ecto_ros</run_depend>
  <run_depend>ecto_image_pipeline</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>rviz</run_depend>

  <test_depend>visualization_msgs</test_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <rviz plugin="${prefix}/object_recognition_rviz_plugin.xml"/>
  </export>
</package>
