<package>
  <name>object_recognition_ros</name>
  <version>0.3.7</version>
  <description>object_recognition_core contains tools to launch several recognition pipelines, train objects, store models ...</description>
  <author email="erublee@willowgarage.com">Ethan Rublee</author>
  <author email="vincent.rabaud@gmail.com">Vincent Rabaud</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <url>wg-perception.github.io/object_recognition_ros</url>

  <build_depend>actionlib</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>ecto</build_depend>
  <build_depend>ecto_ros</build_depend>
  <build_depend>ecto_image_pipeline</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>object_recognition_core</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>ecto</run_depend>
  <run_depend>ecto_ros</run_depend>
  <run_depend>ecto_image_pipeline</run_depend>
  <run_depend>geometric_shapes</run_depend>
  <run_depend>object_recognition_core</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>rostopic</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>visualization_msgs</test_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
